--- a/app/partials/impressaoOrcamento.html
+++ b/app/partials/impressaoOrcamento.html
@@ -100,6 +100,6 @@
     </div>
   </div>
   <div class="rodape">
-    <span>A Carrapeta 68 Mat Hidráulico Ltda - Avenida Lucio Meira, 68 - Várzea - Teresópolis - RJ 25953-003 - email: vendas@carrapeta.com<br>Futura Agência - Commercial ver. 0.7.1 2016</span>
+    <span>A Carrapeta 68 Mat Hidráulico Ltda - Avenida Lucio Meira, 68 - Várzea - Teresópolis - RJ 25953-003 - email: vendas@carrapeta.com<br>Futura Agência - Commercial ver. {{versao}} 2016</span>
   </div>
 </div>
