--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -204,16 +204,17 @@ textarea:focus, input:focus, input[type]:focus, .uneditable-input:focus, .btn:fo
   width: 100%;
   height: auto;
   text-align: center;
-  outline: none;
-  border: 1px solid #6481bb; }
+  border: 1px solid #6481bb;
+  padding: 0px !important; }
 .editable-elem:hover, .inactive-editable-elem:hover {
-  cursor: pointer; }
+  cursor: pointer;
+  padding: 4px !important; }
   .editable-elem:hover span, .inactive-editable-elem:hover span {
     border: 1px dashed #6481bb;
     background-color: rgba(255, 255, 255, 0.8); }
 
 .editable-elem.ativo, .ativo.inactive-editable-elem {
-  padding: 2px; }
+  padding: 4px !important; }
   .editable-elem.ativo span, .ativo.inactive-editable-elem span {
     display: none; }
   .editable-elem.ativo input, .ativo.inactive-editable-elem input {
