--- a/app/views/orcamento.html
+++ b/app/views/orcamento.html
@@ -158,7 +158,7 @@
               <td>{{i.produto.codigo}}</td>
               <td>{{i.produto.nome | limitTo : 50 }}</td>
               <td>{{i.produto.unidade}}</td>
-              <td class="editable-elem" editable-elem><span>{{i.quantidade | currency : ""}}</span><input filtro-moeda number-only type="text" ng-model="i.quantidade"></td>
+              <td class="editable-elem" editable-elem><span>{{i.quantidade | currency : ""}}</span><input filtro-moeda number-only type="text" ng-model="i.quantidade" ng-blur="i.quantidade <= 0 || !i.quantidade ? i.quantidade = 1 : ''"></td>
               <td>{{i.produto.preco | currency}}</td>
               <td><span>{{i.descontoPercent | currency : ""}}%</span></td>
               <td><span>{{i.descontoDinheiro | currency : "R$ "}}</span></td>
@@ -209,7 +209,7 @@
       <div class="col-xs-3 col-sm-3">
         <div><h4>Código</h4></div>
         <div class="input-group">
-          <input type="text" number-only class="form-control" name="CdCliente" aria-describedby="basic-addon2" ng-model="cdCliente" ng-blur="blurCdCliente()" key-shortcuts enter="orcamento.buscaClientePorCodigo(cdCliente)" shift-enter="orcamento.pagamento(true)" f1="orcamento.buscaClientePorCodigo()" ng-readonly="cliente.novo" maxlength="6">
+          <input type="text" number-only class="form-control" name="CdCliente" aria-describedby="basic-addon2" ng-model="cdCliente" ng-blur="blurCdCliente()" key-shortcuts enter="orcamento.buscaClientePorCodigo(cdCliente)" shift-enter="orcamento.pagamento()" f1="orcamento.buscaClientePorCodigo()" ng-readonly="cliente.novo" maxlength="6">
           <span class="input-group-btn">
             <button class="btn btn-default" tabindex="-1" ng-click="orcamento.buscaClientePorCodigo()" ng-disabled="cliente.novo"><span class="glyphicon glyphicon-search"></span></button>
             <button class="btn btn-default" tabindex="-1" ng-click="orcamento.novoCliente()" ng-disabled="cliente.novo"><span class="glyphicon glyphicon-plus"></span></button>
