--- a/app/partials/impressaoOrcamento.html
+++ b/app/partials/impressaoOrcamento.html
@@ -40,7 +40,7 @@
         <br>
         <h4 class="orcamento-identificacao">Orçamento n&#186;: {{orcamento.pedido.codigo}}</h4>
         <br>
-        <span class="data"><h5>Data da impressão: </h5>{{getHoje() | date: 'longDate'}}</span>
+        <span class="data"><h5>Data da impressão: </h5>{{getHoje() | date: 'medium'}}</span>
       </div>
       <table class="tabela" ng-class="$index > 0 ? 'margem' : ''">
         <!--<thead>-->
