--- a/app/styles/_orcamento.scss
+++ b/app/styles/_orcamento.scss
@@ -3,7 +3,9 @@ $print-font-size: 11px;
 @media print {
   .impressao {
     display: inline;
+  }
 
+  .impressao {
     .espacador {
       min-height: 26px !important;
       max-height: 26px !important;
@@ -18,6 +20,16 @@ $print-font-size: 11px;
         border: 1px solid black !important;
       }
     }
+  }
+
+  .impressao.aviso {
+    color: #333 !important;
+    font-size: 2em;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
   }
 
   #formulario-orcamento, #loading, div[name='header'], .alerta, div[name='footer'] {
