--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -505,15 +505,25 @@ textarea:focus, input:focus, input[type]:focus, .uneditable-input:focus, .btn:fo
 @media print {
   .impressao {
     display: inline; }
-    .impressao .espacador {
-      min-height: 26px !important;
-      max-height: 26px !important;
-      height: 26px !important; }
-    .impressao .tabela, .impressao #tabela-orcamento {
+
+  .impressao .espacador {
+    min-height: 26px !important;
+    max-height: 26px !important;
+    height: 26px !important; }
+  .impressao .tabela, .impressao #tabela-orcamento {
+    border: 1px solid black !important; }
+    .impressao .tabela td, .impressao #tabela-orcamento td, .impressao .tabela th, .impressao #tabela-orcamento th {
+      background-color: white !important;
       border: 1px solid black !important; }
-      .impressao .tabela td, .impressao #tabela-orcamento td, .impressao .tabela th, .impressao #tabela-orcamento th {
-        background-color: white !important;
-        border: 1px solid black !important; }
+
+  .impressao.aviso {
+    color: #333 !important;
+    font-size: 2em;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0; }
 
   #formulario-orcamento, #loading, div[name='header'], .alerta, div[name='footer'] {
     display: none; }
