--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -14,13 +14,15 @@ html {
 
 body {
   background-color: $cor-de-fundo;
-  padding-bottom: 60px;
-
   position: relative;
   min-height: 100%;
   //max-height: 100%;
   overflow-x: hidden;
   overflow-y: auto;
+}
+
+body.padding-bottom {
+  padding-bottom: 80px;
 }
 
 #loading {
