--- a/app/partials/footer.html
+++ b/app/partials/footer.html
@@ -1,6 +1,6 @@
 <div class="navbar navbar-default navbar-fixed-bottom">
   <!--<div class="footer">-->
   <div class="footer">
-    <span class="agencia"><a href="http://www.futuraagencia.com.br/" target="_blank">Futura Agência</a> - Commercial ver. {{versao}} 2016</span>
+    <span class="agencia"><a href="http://www.futuraagencia.com.br/" target="_blank">Futura Agência</a> - 2016 - Commercial ver. {{versao}}</span>
   </div>
 </div>
