--- a/app/partials/modalBuscarPessoa.html
+++ b/app/partials/modalBuscarPessoa.html
@@ -11,7 +11,7 @@
         <div class="col-md-4">
           <div><h4>Código</h4></div>
           <div class="input-group">
-            <input type="number" class="form-control" name="cdPessoa" aria-describedby="basic-addon2" ng-model="cdPessoa" key-shortcuts enter="buscarPorCodigo(cdPessoa)">
+            <input type="number" class="form-control" name="cdPessoa" aria-describedby="basic-addon2" ng-model="cdPessoa" keys-shortcuts enter="buscarPorCodigo(cdPessoa)">
             <span class="input-group-btn">
               <button class="btn btn-default" tabindex="-1" ng-click="buscarPorCodigo(cdPessoa)"><span class="glyphicon glyphicon-search"></span></button>
             </span>
@@ -20,7 +20,7 @@
         <div class="col-md-8">
           <div><h4>Nome</h4></div>
           <div class="input-group">
-            <input type="text" class="form-control" ng-model="nmPessoa" key-shortcuts enter="buscarPorNome(nmPessoa)">
+            <input type="text" class="form-control" ng-model="nmPessoa" keys-shortcuts enter="buscarPorNome(nmPessoa)">
             <span class="input-group-btn">
               <button class="btn btn-default" tabindex="-1" ng-click="buscarPorNome(nmPessoa)"><span class="glyphicon glyphicon-search"></span></button>
             </span>
