--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,18 +1,18 @@
 <p>This is the about view.</p>
 
 F1
-<input type="text" key-shortcuts f1="about.teste('f1')">
+<input type="text" keys-shortcuts f1="about.teste('f1')">
 
 ENTER
-<input type="text" key-shortcuts enter="about.teste('enter')">
+<input type="text" keys-shortcuts enter="about.teste('enter')">
 
 SHIFT + ENTER
-<input type="text" key-shortcuts shift-enter="about.teste('shift + enter')">
+<input type="text" keys-shortcuts shift-enter="about.teste('shift + enter')">
 
 Testes
 <button ng-click="about.click($event)">OK</button>
 
-<key-shortcuts f1="about.click('oi')"></key-shortcuts>
+<keys-shortcuts f1="about.click('oi')"></keys-shortcuts>
 
 <br>
 <relogio></relogio>
