--- a/app/partials/header.html
+++ b/app/partials/header.html
@@ -11,8 +11,6 @@
         <span class="icon-bar"></span>
       </button>
 
-      <!--Logotipo da barra de menu-->
-      <!--<a href="#" class="navbar-brand">BestSeller</a>-->
     </div>
 
     <div class="collapse navbar-collapse" id="menu-collapse">
@@ -22,6 +20,7 @@
         <li><a ng-href="#"><span class="glyphicon glyphicon-user"></span> Clientes</a></li>
         <li><a ng-href="#"><span class="glyphicon glyphicon-refresh"></span> Atualização</a></li>
         <li><a ng-href="#"><span class="glyphicon glyphicon-cog"></span> Configurações</a></li>
+        <li><a ng-href="#/logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
       </ul>
     </div>
 
