--- a/app/partials/impressaoOrcamento.html
+++ b/app/partials/impressaoOrcamento.html
@@ -6,7 +6,6 @@
     <br>
     <span class="data"><h5>Data da impressão: </h5>{{getHoje() | date: 'medium'}}</span>
   </div>
-  <br>
   <div class="info">
     <br>
     <table class="dados">
@@ -16,8 +15,12 @@
         <td><h5>Insc. Est.: </h5>{{orcamento.pedido.cliente.iEstadual}}</td>
       </tr>
       <tr>
-        <td><h5>Endereço: </h5>{{orcamento.pedido.cliente.endereco.logradouro}} {{orcamento.pedido.cliente.endereco.numero}}</td>
-        <td><h5>Bairro: </h5>{{orcamento.pedido.cliente.endereco.bairro}}, {{orcamento.pedido.cliente.endereco.cidade}} - {{orcamento.pedido.cliente.endereco.uf}}</td>
+        <td><h5>Endereço: </h5>{{orcamento.pedido.cliente.endereco.logradouro}}
+          {{orcamento.pedido.cliente.endereco.numero}}
+        </td>
+        <td><h5>Bairro: </h5>{{orcamento.pedido.cliente.endereco.bairro}}, {{orcamento.pedido.cliente.endereco.cidade}}
+          - {{orcamento.pedido.cliente.endereco.uf}}
+        </td>
         <td><h5>CEP: </h5>{{orcamento.pedido.cliente.endereco.cep}}</td>
       </tr>
       <tr>
@@ -33,8 +36,10 @@
     </table>
     <br>
     <br>
+
     <div ng-repeat="bloco in orcamento.pedido.blocos track by $index">
       <p ng-class="$index > 0 ? 'quebra' : ''"></p>
+
       <div class="cabecalho" ng-if="$index > 0">
         <div class="logo"><img src="./images/carrapeta.jpg" alt=""></div>
         <br>
@@ -44,30 +49,36 @@
       </div>
       <table class="tabela" ng-class="$index > 0 ? 'margem' : ''">
         <!--<thead>-->
-          <tr>
-            <th>CÓDIGO</th>
-            <th>DESCRIÇÃO</th>
-            <th>UND</th>
-            <th>QTD</th>
-            <th>PREÇO</th>
-            <th>TOTAL</th>
-          </tr>
+        <tr>
+          <th>CÓDIGO</th>
+          <th>DESCRIÇÃO</th>
+          <th>UND</th>
+          <th>QTD</th>
+          <th>PREÇO</th>
+          <th>TOTAL</th>
+        </tr>
         <!--</thead>-->
         <tbody>
-          <tr ng-repeat="i in bloco">
-            <td>{{i.produto.codigo}}</td>
-            <td>{{i.produto.nome | truncate: '60'}}</td>
-            <td>{{i.produto.unidade}}</td>
-            <td>{{i.quantidade}}</td>
-            <td>{{i.produto.preco  | currency: 'R$ '}}</td>
-            <td>{{(i.quantidade * i.produto.preco) | currency: 'R$ '}}</td>
-          </tr>
+        <tr ng-repeat="i in bloco">
+          <td>{{i.produto.codigo}}</td>
+          <td>{{i.produto.nome | truncate: '60'}}</td>
+          <td>{{i.produto.unidade}}</td>
+          <td>{{i.quantidade}}</td>
+          <td>{{i.produto.preco | currency: 'R$ '}}</td>
+          <td>{{(i.quantidade * i.produto.preco) | currency: 'R$ '}}</td>
+        </tr>
         </tbody>
       </table>
-      <span ng-init="max=orcamento.pedido.blocos.length==1?15:($index==0?15:($index+1>=orcamento.pedido.blocos.length?15:30))"></span>
-      <div class="espacador" ng-repeat="n in getNumber(max - (bloco.length >= max ? max : bloco.length)) track by $index"></div>
-      <p ng-class="{ 'quebra': $index + 1 >= orcamento.pedido.blocos.length && orcamento.pedido.blocos[$index].length >= 18 }"></p>
-      <div class="cabecalho" ng-if="$index + 1 >= orcamento.pedido.blocos.length && orcamento.pedido.blocos[$index].length >= 18">
+      <span
+        ng-init="max=orcamento.pedido.blocos.length==1?15:($index==0?15:($index+1>=orcamento.pedido.blocos.length?15:30))"></span>
+
+      <div class="espacador"
+           ng-repeat="n in getNumber(max - (bloco.length >= max ? max : bloco.length)) track by $index"></div>
+      <p
+        ng-class="{ 'quebra': $index + 1 >= orcamento.pedido.blocos.length && orcamento.pedido.blocos[$index].length >= 18 }"></p>
+
+      <div class="cabecalho"
+           ng-if="$index + 1 >= orcamento.pedido.blocos.length && orcamento.pedido.blocos[$index].length >= 18">
         <div class="logo"><img src="./images/carrapeta.jpg" alt=""></div>
         <br>
         <h4 class="orcamento-identificacao">Orçamento n&#186;: {{orcamento.pedido.codigo}}</h4>
@@ -77,7 +88,9 @@
     </div>
     <table class="totais">
       <tr>
-        <td><h5>Total de itens: </h5>{{orcamento.pedido.items.length}} {{orcamento.pedido.items.length > 1 ? 'ITENS' : 'ITEM'}}</td>
+        <td><h5>Total de itens: </h5>{{orcamento.pedido.items.length}} {{orcamento.pedido.items.length > 1 ? 'ITENS' :
+          'ITEM'}}
+        </td>
         <td>
           <h5>Valor Total: </h5>{{orcamento.pedido.getValorTotalSemDesconto() | currency: 'R$ '}}<br>
           <h5>Desconto Total: </h5>{{orcamento.pedido.descontoDinheiro | currency: 'R$ '}}<br>
@@ -85,7 +98,8 @@
         </td>
         <td>
           <h5>Pagamento:</h5>
-          <span ng-repeat="p in orcamento.pedido.pagamentos"><br>{{p.modalidade.nome}} - {{p.valor | currency: 'R$ '}}</span>
+          <span
+            ng-repeat="p in orcamento.pedido.pagamentos"><br>{{p.modalidade.nome}} - {{p.valor | currency: 'R$ '}}</span>
           <br>
           <h5>Total:</h5><br>{{orcamento.pedido.getValorTotalComDesconto() | currency: 'R$ '}}
         </td>
@@ -94,12 +108,13 @@
     <br>
   </div>
   <br>
+
   <div class="assinatura">
     <div>
       <h5>Atenciosamente</h5>
     </div>
   </div>
   <div class="rodape">
-    <span>A Carrapeta 68 Mat Hidráulico Ltda - Avenida Lucio Meira, 68 - Várzea - Teresópolis - RJ 25953-003 - email: vendas@carrapeta.com<br>Futura Agência - Commercial ver. {{versao}} 2016</span>
+    <span>A Carrapeta 68 Mat Hidráulico Ltda - Avenida Lucio Meira, 68 - Várzea - Teresópolis - RJ 25953-003 - email: vendas@carrapeta.com<br>Futura Agência - 2016 - Commercial ver. {{versao}}</span>
   </div>
 </div>
