--- a/app/partials/modalBuscarPedido.html
+++ b/app/partials/modalBuscarPedido.html
@@ -94,34 +94,34 @@
 
         <div class="col-md-3" ng-show="opt == 'pedido'">
           <h4>Código</h4>
-          <input type="text" class="form-control" name="cdPedido" aria-describedby="basic-addon2" ng-model="cdPedido" key-shortcuts enter="buscarPorCodigoPedido(cdPedido)" ui-mask="999999">
+          <input type="text" class="form-control" name="cdPedido" aria-describedby="basic-addon2" ng-model="cdPedido" keys-shortcuts enter="buscarPorCodigoPedido(cdPedido)" ui-mask="999999">
         </div>
 
         <div class="col-md-3" ng-show="opt == 'vendedor'">
           <h4>Código</h4>
-          <input type="text" class="form-control" name="cdVendedor" aria-describedby="basic-addon2" ng-model="cdVendedor" key-shortcuts enter="buscarPorCodigoVendedor(cdVendedor)" ui-mask="9999">
+          <input type="text" class="form-control" name="cdVendedor" aria-describedby="basic-addon2" ng-model="cdVendedor" keys-shortcuts enter="buscarPorCodigoVendedor(cdVendedor)" ui-mask="9999">
         </div>
         <div class="col-md-6" ng-show="opt == 'vendedor'">
           <h4>Nome</h4>
-          <input type="text" class="form-control" name="nmVendedor" aria-describedby="basic-addon2" ng-model="nmVendedor" key-shortcuts enter="buscarPorNomeVendedor(nmVendedor)">
+          <input type="text" class="form-control" name="nmVendedor" aria-describedby="basic-addon2" ng-model="nmVendedor" keys-shortcuts enter="buscarPorNomeVendedor(nmVendedor)">
         </div>
 
         <div class="col-md-3" ng-show="opt == 'cliente'">
           <h4>Código</h4>
-          <input type="text" class="form-control" name="cdCliente" aria-describedby="basic-addon2" ng-model="cdCliente" key-shortcuts enter="buscarPorCodigoCliente(cdCliente)" ui-mask="999999">
+          <input type="text" class="form-control" name="cdCliente" aria-describedby="basic-addon2" ng-model="cdCliente" keys-shortcuts enter="buscarPorCodigoCliente(cdCliente)" ui-mask="999999">
         </div>
         <div class="col-md-6" ng-show="opt == 'cliente'">
           <h4>Nome</h4>
-          <input type="text" class="form-control" name="nmCliente" aria-describedby="basic-addon2" ng-model="nmCliente" key-shortcuts enter="buscarPorNomeCliente(nmCliente)">
+          <input type="text" class="form-control" name="nmCliente" aria-describedby="basic-addon2" ng-model="nmCliente" keys-shortcuts enter="buscarPorNomeCliente(nmCliente)">
         </div>
 
         <div class="col-md-3" ng-show="opt == 'data'">
           <h4>Inicial</h4>
-          <input type="text" class="form-control" name="dtInicial" aria-describedby="basic-addon2" ng-model="dtInicial" key-shortcuts enter="" ui-mask="99/99/9999" model-view-value="true">
+          <input type="text" class="form-control" name="dtInicial" aria-describedby="basic-addon2" ng-model="dtInicial" keys-shortcuts enter="" ui-mask="99/99/9999" model-view-value="true">
         </div>
         <div class="col-md-3" ng-show="opt == 'data'">
           <h4>Final</h4>
-          <input type="text" class="form-control" name="dtFinal" aria-describedby="basic-addon2" ng-model="dtFinal" key-shortcuts enter="" ui-mask="99/99/9999" model-view-value="true">
+          <input type="text" class="form-control" name="dtFinal" aria-describedby="basic-addon2" ng-model="dtFinal" keys-shortcuts enter="" ui-mask="99/99/9999" model-view-value="true">
         </div>
 
       </div>
@@ -130,7 +130,7 @@
         <div class="col-md-2">
           <h4>Orçamento</h4>
             <div class="input-group">
-              <input type="text" class="form-control" ng-model="cdPedido" placeholder="código" key-shortcuts enter="buscar()">
+              <input type="text" class="form-control" ng-model="cdPedido" placeholder="código" keys-shortcuts enter="buscar()">
               <span class="input-group-btn">
                 <button class="btn btn-default" tabindex="-1" ng-click="cdPedido=''"><span class="glyphicon glyphicon-remove"></span></button>
               </span>
@@ -139,7 +139,7 @@
         <div class="col-md-2">
           <h4>Data Inicial</h4>
           <div class="input-group">
-            <input type="text" class="form-control" ng-model="dtInicial" ui-mask="99/99/9999" model-view-value="true" key-shortcuts enter="buscar()">
+            <input type="text" class="form-control" ng-model="dtInicial" ui-mask="99/99/9999" model-view-value="true" keys-shortcuts enter="buscar()">
             <span class="input-group-btn">
               <button class="btn btn-default" tabindex="-1" ng-click="dtInicial=''"><span class="glyphicon glyphicon-remove"></span></button>
             </span>
@@ -148,7 +148,7 @@
         <div class="col-md-2">
           <h4>Data Final</h4>
           <div class="input-group">
-            <input type="text" class="form-control" ng-model="dtFinal" ui-mask="99/99/9999" model-view-value="true" key-shortcuts enter="buscar()">
+            <input type="text" class="form-control" ng-model="dtFinal" ui-mask="99/99/9999" model-view-value="true" keys-shortcuts enter="buscar()">
             <span class="input-group-btn">
               <button class="btn btn-default" tabindex="-1" ng-click="dtFinal=''"><span class="glyphicon glyphicon-remove"></span></button>
             </span>
@@ -157,7 +157,7 @@
         <div class="col-md-6">
           <h4>Vendedor</h4>
           <div class="input-group">
-            <input type="text" class="form-control" ng-value="vendedor.codigo + (vendedor.codigo?' - ':'') + vendedor.nome" placeholder="Clique na lupa para buscar um vendedor" readonly="true" key-shortcuts enter="buscar()">
+            <input type="text" class="form-control" ng-value="vendedor.codigo + (vendedor.codigo?' - ':'') + vendedor.nome" placeholder="Clique na lupa para buscar um vendedor" readonly="true" keys-shortcuts enter="buscar()">
             <span class="input-group-btn">
               <button class="btn btn-default" tabindex="-1" ng-click="removeVendedor()"><span class="glyphicon glyphicon-remove"></span></button>
               <button class="btn btn-default" tabindex="-1" ng-click="buscarVendedor()"><span class="glyphicon glyphicon-search"></span></button>
