--- a/app/partials/modalBuscarProduto.html
+++ b/app/partials/modalBuscarProduto.html
@@ -1,33 +1,39 @@
 <div class="meu-modal">
 
   <div class="header">
-    <div class="title"><span class="glyphicon glyphicon-tags"></span>&nbsp; Buscar Produto <span class="glyphicon glyphicon-remove close" ng-click="cancel()"></span></div>
+    <div class="title"><span class="glyphicon glyphicon-tags"></span>&nbsp; Buscar Produto <span
+      class="glyphicon glyphicon-remove close" ng-click="cancel()"></span></div>
   </div>
 
   <div class="body">
 
-    <div class="container">
+    <div class="container condensar-rows">
       <div class="row">
         <div class="col-md-4">
           <div><h4>Código</h4></div>
           <div class="input-group">
-            <input type="number" class="form-control" name="cdProduto" aria-describedby="basic-addon2" ng-model="cdProduto" press-enter="buscarPorCodigo(cdProduto)">
+            <input type="number" class="form-control" name="cdProduto" aria-describedby="basic-addon2"
+                   ng-model="cdProduto" keys-shortcuts enter="buscarPorCodigo(cdProduto)">
             <span class="input-group-btn">
-              <button class="btn btn-default" tabindex="-1" ng-click="buscarPorCodigo(cdProduto)"><span class="glyphicon glyphicon-search"></span></button>
+              <button class="btn btn-default" tabindex="-1" ng-click="buscarPorCodigo(cdProduto)"><span
+                class="glyphicon glyphicon-search"></span></button>
             </span>
           </div>
         </div>
         <div class="col-md-8">
           <div><h4>Nome</h4></div>
           <div class="input-group">
-            <input type="text" class="form-control" ng-model="nmProduto" press-enter="buscarPorNome(nmProduto)">
+            <input type="text" class="form-control" ng-model="nmProduto" keys-shortcuts
+                   enter="buscarPorNome(nmProduto)">
             <span class="input-group-btn">
-              <button class="btn btn-default" tabindex="-1" ng-click="buscarPorNome(nmProduto)"><span class="glyphicon glyphicon-search"></span></button>
+              <button class="btn btn-default" tabindex="-1" ng-click="buscarPorNome(nmProduto)"><span
+                class="glyphicon glyphicon-search"></span></button>
             </span>
           </div>
         </div>
       </div>
       <br>
+
       <div class="row">
         <div class="col-md-12">
           <table class="tabela tabela-bordered tabela-selecionavel" style="width: 100%">
