--- a/app/partials/modalPagamento.html
+++ b/app/partials/modalPagamento.html
@@ -1,7 +1,8 @@
 <div class="meu-modal">
 
   <div class="header">
-    <div class="title"><span class="glyphicon glyphicon-credit-card"></span> Pagamento <span class="glyphicon glyphicon-remove close" ng-click="cancel()"></span></div>
+    <div class="title"><span class="glyphicon glyphicon-credit-card"></span> Pagamento <span
+      class="glyphicon glyphicon-remove close" ng-click="cancel()"></span></div>
   </div>
 
   <div class="body">
@@ -11,55 +12,66 @@
         <div class="col-md-3">
           <div><h4>Código</h4></div>
           <div class="input-group">
-            <input type="text" name="codigo" class="form-control" ng-model="cdModalidade" ng-blur="blurCodigo()" number-only aria-describedby="basic-addon2" key-shortcuts enter="buscarModalidadePorCodigo()" ng-readonly="restante() <= 0" shift-enter="gravar()">
+            <input type="text" name="codigo" class="form-control" ng-model="cdModalidade" ng-blur="blurCodigo()"
+                   number-only aria-describedby="basic-addon2" keys-shortcuts enter="buscarModalidadePorCodigo()"
+                   ng-readonly="restante() <= 0" shift-enter="gravar()">
             <span class="input-group-btn">
-              <button class="btn btn-default" tabindex="-1" ng-click="buscarModalidadePorCodigo()"><span class="glyphicon glyphicon-search"></span></button>
+              <button class="btn btn-default" tabindex="-1" ng-click="buscarModalidadePorCodigo()"><span
+                class="glyphicon glyphicon-search"></span></button>
             </span>
           </div>
         </div>
         <div class="col-md-6">
           <div><h4>Modalidade</h4></div>
-          <input type="text" name="nome" ng-model="nmModalidade" ng-blur="blurNome()" readonly="true" class="form-control">
+          <input type="text" name="nome" ng-model="nmModalidade" ng-blur="blurNome()" readonly="true"
+                 class="form-control">
         </div>
         <div class="col-md-3">
           <div><h4>Valor</h4></div>
           <div class="input-group">
             <span class="input-group-addon">R$</span>
-            <input type="text" name="valor" ng-model="pagamento.valor" filtro-moeda number-only class="form-control" key-shortcuts enter="addModalidade()" shift-enter="gravar()" ng-readonly="restante() <= 0">
+            <input type="text" name="valor" ng-model="pagamento.valor" currency number-only class="form-control"
+                   keys-shortcuts enter="addModalidade()" shift-enter="gravar()" ng-readonly="restante() <= 0">
           </div>
         </div>
       </div>
       <br>
+
       <div class="row">
         <div class="col-md-12">
           <table class="tabela tabela-bordered" style="width: 100%" id="tabela-pagamento">
             <thead>
-              <tr>
-                <th>Cód</th>
-                <th>Modalidade</th>
-                <th>Desc %</th>
-                <th>Desc $</th>
-                <th>Valor</th>
-                <th>&nbsp;</th>
-              </tr>
+            <tr>
+              <th>Cód</th>
+              <th>Modalidade</th>
+              <th>Desc %</th>
+              <th>Desc $</th>
+              <th>Valor</th>
+              <th>&nbsp;</th>
+            </tr>
             </thead>
             <tbody>
-              <tr ng-if="pedido.pagamentos.length == 0">
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-              </tr>
-              <tr ng-repeat="p in pedido.pagamentos track by $index">
-                <td>{{p.modalidade.codigo}}</td>
-                <td>{{p.modalidade.nome}}</td>
-                <td><span>{{(p.descontoPercent | currency: '') || '0,00'}}%</span></td>
-                <td><span>{{p.descontoDinheiro | currency: 'R$' }}</span></td>
-                <td class="editable-elem" editable-elem><span>{{p.valor | currency: 'R$'}}</span><input filtro-moeda number-only type="text" ng-model="p.valor" ng-blur="p.valor <= 0.01 ? p.valor = 0.01 : false"></span></td>
-                <td><a href="" ng-click="removePagamento(p)"><span class="glyphicon glyphicon-trash"></span></a></td>
-              </tr>
+            <tr ng-if="pedido.pagamentos.length == 0">
+              <td>&nbsp;</td>
+              <td>&nbsp;</td>
+              <td>&nbsp;</td>
+              <td>&nbsp;</td>
+              <td>&nbsp;</td>
+              <td>&nbsp;</td>
+            </tr>
+            <tr ng-repeat="p in pedido.pagamentos track by $index">
+              <td>{{p.modalidade.codigo}}</td>
+              <td>{{p.modalidade.nome}}</td>
+              <td><span>{{(p.descontoPercent | currency: '') || '0,00'}}%</span></td>
+              <td><span>{{p.descontoDinheiro | currency: 'R$' }}</span></td>
+              <td class="editable-elem" editable-elem><span>{{p.valor | currency: 'R$'}}</span><input currency
+                                                                                                      number-only
+                                                                                                      type="text"
+                                                                                                      ng-model="p.valor"
+                                                                                                      ng-blur="p.valor <= 0.01 || !p.valor ? p.valor = 0.01 : false"></span>
+              </td>
+              <td><a href="" ng-click="removePagamento(p)"><span class="glyphicon glyphicon-trash"></span></a></td>
+            </tr>
             </tbody>
           </table>
         </div>
@@ -71,14 +83,20 @@
         </div>
         <div class="col-md-4">
           <div><h4>Desconto %</h4></div>
-          <div class="div-display editable-elem" editable-elem><span>{{(pedido.descontoPercent | currency: '') || '0,00'}}%</span><input
-            type="text" filtro-moeda number-only ng-model="pedido.descontoPercent" ng-change="pedido.setDescontoPercent(pedido.descontoPercent)" ng-blur="pedido.descontoPercent < 0 ? pedido.descontoPercent = 0 : false">
+          <div class="div-display editable-elem" editable-elem>
+            <span>{{(pedido.descontoPercent | currency: '') || '0,00'}}%</span><input
+            type="text" currency number-only ng-model="pedido.descontoPercent"
+            ng-change="pedido.setDescontoPercent(pedido.descontoPercent)"
+            ng-blur="pedido.descontoPercent < 0 ? pedido.descontoPercent = 0 : false">
           </div>
         </div>
         <div class="col-md-4">
           <div><h4>Desconto $</h4></div>
-          <div class="div-display editable-elem" editable-elem><span>{{pedido.descontoDinheiro | currency: 'R$ '}}</span><input
-            type="text" filtro-moeda number-only ng-model="pedido.descontoDinheiro" ng-change="pedido.setDescontoDinheiro(pedido.descontoDinheiro)" ng-blur="pedido.descontoDinheiro < 0 ? pedido.descontoDinheiro = 0 : false">
+          <div class="div-display editable-elem" editable-elem>
+            <span>{{pedido.descontoDinheiro | currency: 'R$ '}}</span><input
+            type="text" currency number-only ng-model="pedido.descontoDinheiro"
+            ng-change="pedido.setDescontoDinheiro(pedido.descontoDinheiro)"
+            ng-blur="pedido.descontoDinheiro < 0 ? pedido.descontoDinheiro = 0 : false">
           </div>
         </div>
         <div class="col-md-4">
