--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -636,8 +636,7 @@ textarea:focus, input:focus, input[type]:focus, .uneditable-input:focus, .btn:fo
   .impressao .info {
     width: 100%;
     border-top: 1px solid black;
-    border-bottom: 1px solid black;
-    padding: 10px 0; }
+    border-bottom: 1px solid black; }
     .impressao .info table td {
       vertical-align: top;
       font-size: 11px; }
