--- a/app/views/login.html
+++ b/app/views/login.html
@@ -7,8 +7,8 @@
     <div class="card form-login">
       <div class="logo-login"></div>
       <!--<h1><span class="glyphicon glyphicon-user"></span></h1>-->
-      <input type="text" name="usuario" placeholder="Usuário" ng-model="username" key-shortcuts enter="login.avancar()">
-      <input type="password" name="senha" placeholder="Senha" ng-model="password" key-shortcuts enter="login.login(username, password)">
+      <input type="text" name="usuario" placeholder="Usuário" ng-model="username" keys-shortcuts enter="login.avancar()">
+      <input type="password" name="senha" placeholder="Senha" ng-model="password" keys-shortcuts enter="login.login(username, password)">
       <button class="btn btn-default" ng-click="login.login(username, password)">Login</button>
     </div>
   </div>
