--- a/app/views/orcamento.html
+++ b/app/views/orcamento.html
@@ -1,4 +1,4 @@
-<div id="formulario-orcamento" key-shortcuts>
+<div id="formulario-orcamento">
 
   <div class="row">
     <div class="col-sm-6 col-md-3">
@@ -45,7 +45,7 @@
       <div class="col-xs-3 col-sm-3">
         <div><h4>Código</h4></div>
         <div class="input-group">
-          <input type="text" number-only name="CdVendedor" class="form-control" aria-describedby="basic-addon2" ng-model="cdVendedor" ng-blur="blurCdVendedor()" key-shortcuts enter="orcamento.buscaVendedorPorCodigo(cdVendedor)" shift-enter="orcamento.escapeVendedor()" f1="orcamento.buscaVendedorPorCodigo()">
+          <input type="text" number-only name="CdVendedor" class="form-control" aria-describedby="basic-addon2" ng-model="cdVendedor" ng-blur="blurCdVendedor()" keys-shortcuts prevent-default="true" enter="orcamento.buscaVendedorPorCodigo(cdVendedor)" shift-enter="orcamento.escapeVendedor()" f1="orcamento.buscaVendedorPorCodigo()">
           <span class="input-group-btn">
             <button class="btn btn-default" tabindex="-1" ng-click="orcamento.buscaVendedorPorCodigo()"><span class="glyphicon glyphicon-search"></span></button>
           </span>
@@ -78,7 +78,7 @@
         <div><h4>Código</h4></div>
         <!--<div class="input-group">-->
         <div>
-          <input name="CdProduto" type="text" number-only class="form-control" aria-describedby="basic-addon2" ng-model="cdProduto" ng-blur="blurProduto()" key-shortcuts enter="orcamento.buscaProdutoPorCodigo(cdProduto)" shift-enter="orcamento.escapeProdutos()" f1="orcamento.pesquisarProdutoNoModal()" maxlength="6">
+          <input name="CdProduto" type="text" number-only class="form-control" aria-describedby="basic-addon2" ng-model="cdProduto" ng-blur="blurProduto()" keys-shortcuts prevent-default="true" enter="orcamento.buscaProdutoPorCodigo(cdProduto)" shift-enter="orcamento.escapeProdutos()" f1="orcamento.pesquisarProdutoNoModal()" maxlength="6">
         </div>
           <!--<span class="input-group-btn">-->
             <!--<button class="btn btn-default" tabindex="-1" ng-click="orcamento.buscaProdutoPorCodigo(cdProduto)"><span class="glyphicon glyphicon-search"></span></button>-->
@@ -89,7 +89,7 @@
         <div><h4>Descrição</h4></div>
         <div>
           <input name="NmProduto" type="text" class="form-control" ng-model="nmProduto" ng-readonly="" ng-blur="blurProduto()"
-                 key-shortcuts enter="orcamento.avancar('input', 'quantidade')"
+                 keys-shortcuts prevent-default="true" enter="orcamento.avancar('input', 'quantidade')"
                  shift-enter="orcamento.escapeProdutos()"
                  f1="orcamento.pesquisarProdutoNoModal()"
                  uib-typeahead="produto as produto.NmProduto for produto in orcamento.buscaProdutoPorDescricao($viewValue)"
@@ -110,14 +110,14 @@
       <div class="col-xs-3 col-sm-3">
         <div><h4>Quantidade</h4></div>
         <div class="input-group">
-          <input name="quantidade" type="text" class="form-control" filtro-moeda number-only ng-model="item.quantidade" ng-change="item.setQuantidade(item.quantidade)" key-shortcuts enter="item.quantidade <= 0 ? orcamento.limparProdutoTemp() : orcamento.addItem()" shift-enter="orcamento.escapeProdutos()" f1="orcamento.pesquisarProdutoNoModal()">
+          <input name="quantidade" type="text" class="form-control" currency number-only ng-model="item.quantidade" ng-change="item.setQuantidade(item.quantidade)" keys-shortcuts prevent-default="true" enter="item.quantidade <= 0 ? orcamento.limparProdutoTemp() : orcamento.addItem()" shift-enter="orcamento.escapeProdutos()" f1="orcamento.pesquisarProdutoNoModal()">
           <span class="input-group-addon">{{item.produto.unidade || '(un)'}}</span>
         </div>
       </div>
       <div class="col-xs-3 col-sm-3">
         <div><h4>Desconto %</h4></div>
         <div class="input-group">
-          <input name="percent" type="text" class="form-control" filtro-moeda number-only ng-model="item.descontoPercent" ng-change="item.setDescontoPercent(item.descontoPercent);" key-shortcuts enter="orcamento.avancar('input', 'dinheiro')" shift-enter="orcamento.escapeProdutos()" readonly="true" tabindex="-1">
+          <input name="percent" type="text" class="form-control" currency number-only ng-model="item.descontoPercent" ng-change="item.setDescontoPercent(item.descontoPercent);" keys-shortcuts prevent-default="true" enter="orcamento.avancar('input', 'dinheiro')" shift-enter="orcamento.escapeProdutos()" readonly="true" tabindex="-1">
           <span class="input-group-addon">%</span>
         </div>
       </div>
@@ -125,7 +125,7 @@
         <div><h4>Desconto R$</h4></div>
         <div class="input-group">
           <span class="input-group-addon">R$</span>
-          <input name="dinheiro" type="text" class="form-control" filtro-moeda number-only ng-model="item.descontoDinheiro" ng-change="item.setDescontoDinheiro(item.descontoDinheiro)" key-shortcuts enter="orcamento.addItem()" shift-enter="orcamento.escapeProdutos()" readonly="true" tabindex="-1">
+          <input name="dinheiro" type="text" class="form-control" currency number-only ng-model="item.descontoDinheiro" ng-change="item.setDescontoDinheiro(item.descontoDinheiro)" keys-shortcuts prevent-default="true" enter="orcamento.addItem()" shift-enter="orcamento.escapeProdutos()" readonly="true" tabindex="-1">
         </div>
       </div>
       <div class="col-xs-3 col-sm-3">
@@ -158,7 +158,7 @@
               <td>{{i.produto.codigo}}</td>
               <td>{{i.produto.nome | limitTo : 50 }}</td>
               <td>{{i.produto.unidade}}</td>
-              <td class="editable-elem" editable-elem><span>{{i.quantidade | currency : ""}}</span><input filtro-moeda number-only type="text" ng-model="i.quantidade" ng-blur="i.quantidade <= 0 || !i.quantidade ? i.quantidade = 1 : ''"></td>
+              <td class="editable-elem" editable-elem><span>{{i.quantidade | currency : ""}}</span><input currency number-only type="text" ng-model="i.quantidade" ng-blur="i.quantidade <= 0 || !i.quantidade ? i.quantidade = 1 : ''"></td>
               <td>{{i.produto.preco | currency}}</td>
               <td><span>{{i.descontoPercent | currency : ""}}%</span></td>
               <td><span>{{i.descontoDinheiro | currency : "R$ "}}</span></td>
@@ -209,7 +209,7 @@
       <div class="col-xs-3 col-sm-3">
         <div><h4>Código</h4></div>
         <div class="input-group">
-          <input type="text" number-only class="form-control" name="CdCliente" aria-describedby="basic-addon2" ng-model="cdCliente" ng-blur="blurCdCliente()" key-shortcuts enter="orcamento.buscaClientePorCodigo(cdCliente)" shift-enter="orcamento.pagamento()" f1="orcamento.buscaClientePorCodigo()" ng-readonly="cliente.novo" maxlength="6">
+          <input type="text" number-only class="form-control" name="CdCliente" aria-describedby="basic-addon2" ng-model="cdCliente" ng-blur="blurCdCliente()" keys-shortcuts prevent-default="true" enter="orcamento.buscaClientePorCodigo(cdCliente)" shift-enter="orcamento.pagamento()" f1="orcamento.buscaClientePorCodigo()" ng-readonly="cliente.novo" maxlength="6">
           <span class="input-group-btn">
             <button class="btn btn-default" tabindex="-1" ng-click="orcamento.buscaClientePorCodigo()" ng-disabled="cliente.novo"><span class="glyphicon glyphicon-search"></span></button>
             <button class="btn btn-default" tabindex="-1" ng-click="orcamento.novoCliente()" ng-disabled="cliente.novo"><span class="glyphicon glyphicon-plus"></span></button>
@@ -219,13 +219,13 @@
       <div class="col-xs-9 col-sm-9">
         <div><h4>Nome <sup>{{cliente.novo ? '1' : ''}}</sup></h4></div>
         <div>
-          <input name="nome-cliente" type="text" class="form-control" ng-model="orcamento.pedido.cliente.nome" ng-readonly="!cliente.novo" key-shortcuts enter="orcamento.avancar('select', 'tipo')" shift-enter="orcamento.salvar()" maxlength="60">
+          <input name="nome-cliente" type="text" class="form-control" ng-model="orcamento.pedido.cliente.nome" ng-readonly="!cliente.novo" keys-shortcuts prevent-default="true" enter="orcamento.avancar('select', 'tipo')" shift-enter="orcamento.salvar()" maxlength="60">
         </div>
       </div>
       <div class="col-xs-3 col-sm-3">
         <div><h4>Tipo <sup>{{cliente.novo ? '1' : ''}}</sup></h4></div>
         <div>
-          <select name="tipo" class="form-control" ng-model="orcamento.pedido.cliente.tipo"  ng-disabled="!cliente.novo" key-shortcuts enter="orcamento.avancar('input', orcamento.pedido.cliente.tipo === 'F' ? 'cpf' : 'cnpj')" shift-enter="orcamento.salvar()">
+          <select name="tipo" class="form-control" ng-model="orcamento.pedido.cliente.tipo"  ng-disabled="!cliente.novo" keys-shortcuts prevent-default="true" enter="orcamento.avancar('input', orcamento.pedido.cliente.tipo === 'F' ? 'cpf' : 'cnpj')" shift-enter="orcamento.salvar()">
             <option value="F">Pessoa Física</option>
             <option value="J">Pessoa Jurídica</option>
           </select>
@@ -234,26 +234,26 @@
       <div class="col-xs-3 col-sm-3">
         <div><h4>CPF <sup>{{cliente.novo ? '1' : ''}}</sup></h4></div>
         <div>
-          <input name="cpf" type="text" class="form-control" ng-model="orcamento.pedido.cliente.cpf" ui-mask="999.999.999-99" ng-readonly="!cliente.novo || orcamento.pedido.cliente.tipo !== 'F'" key-shortcuts enter="orcamento.avancar('input', 'cep')" shift-enter="orcamento.salvar()" ng-change="onchangeCPF()">
+          <input name="cpf" type="text" class="form-control" ng-model="orcamento.pedido.cliente.cpf" ui-mask="999.999.999-99" ng-readonly="!cliente.novo || orcamento.pedido.cliente.tipo !== 'F'" keys-shortcuts prevent-default="true" enter="orcamento.avancar('input', 'cep')" shift-enter="orcamento.salvar()" ng-change="onchangeCPF()">
         </div>
       </div>
       <div class="col-xs-3 col-sm-3">
         <div><h4>CNPJ <sup>{{cliente.novo ? '1' : ''}}</sup></h4></div>
         <div>
-          <input name="cnpj" type="text" class="form-control" ng-model="orcamento.pedido.cliente.cnpj" ui-mask="99.999.999/9999-99" ng-readonly="!cliente.novo  || orcamento.pedido.cliente.tipo !== 'J'" key-shortcuts enter="orcamento.avancar('input', 'iEstadual')" shift-enter="orcamento.salvar()" ng-change="onchangeCNPJ()">
+          <input name="cnpj" type="text" class="form-control" ng-model="orcamento.pedido.cliente.cnpj" ui-mask="99.999.999/9999-99" ng-readonly="!cliente.novo  || orcamento.pedido.cliente.tipo !== 'J'" keys-shortcuts prevent-default="true" enter="orcamento.avancar('input', 'iEstadual')" shift-enter="orcamento.salvar()" ng-change="onchangeCNPJ()">
         </div>
       </div>
       <div class="col-xs-3 col-sm-3">
         <div><h4>Inscrição Estadual <sup>{{cliente.novo ? '1' : ''}}</sup></h4></div>
         <div>
-          <input name="iEstadual" type="text" class="form-control" ng-model="orcamento.pedido.cliente.iEstadual" ng-readonly="!cliente.novo || orcamento.pedido.cliente.tipo !== 'J'" key-shortcuts enter="orcamento.avancar('input', 'cep')" shift-enter="orcamento.salvar()" maxlength="20">
+          <input name="iEstadual" type="text" class="form-control" ng-model="orcamento.pedido.cliente.iEstadual" ng-readonly="!cliente.novo || orcamento.pedido.cliente.tipo !== 'J'" keys-shortcuts prevent-default="true" enter="orcamento.avancar('input', 'cep')" shift-enter="orcamento.salvar()" maxlength="20">
         </div>
       </div>
       <div class="col-xs-3 col-sm-3" style="padding: 0;">
         <div class="col-sm-8">
           <div><h4>CEP <sup>{{cliente.novo ? '1' : ''}}</sup></h4></div>
           <div ng-class="cliente.novo ? 'input-group' : ''">
-            <input name="cep" type="text" class="form-control" key-shortcuts enter="cdCEP == orcamento.pedido.cliente.endereco.cep ? orcamento.avancar('input', 'endNumero') : orcamento.buscarCEP()" shift-enter="orcamento.salvar()" f1="orcamento.buscarCEP(true)" ng-readonly="!cliente.novo" ng-model="cdCEP" ui-mask="99999-999" ng-blur="blurCdCEP()">
+            <input name="cep" type="text" class="form-control" keys-shortcuts prevent-default="true" enter="cdCEP == orcamento.pedido.cliente.endereco.cep ? orcamento.avancar('input', 'endNumero') : orcamento.buscarCEP()" shift-enter="orcamento.salvar()" f1="orcamento.buscarCEP(true)" ng-readonly="!cliente.novo" ng-model="cdCEP" ui-mask="99999-999" ng-blur="blurCdCEP()">
             <span class="input-group-btn" ng-hide="!cliente.novo">
               <button class="btn btn-default" tabindex="-1" ng-click="orcamento.buscarCEP(true)"><span class="glyphicon glyphicon-search"></span></button>
             </span>
@@ -277,7 +277,7 @@
           <!--NUMERO-->
           <div><h4>&#8470; <sup>{{cliente.novo ? '1' : ''}}</sup></h4></div>
           <div>
-            <input name="endNumero" type="text" class="form-control" ng-readonly="!cliente.novo" ng-model="orcamento.pedido.cliente.endereco.numero" key-shortcuts enter="orcamento.avancar('input', 'tel-cliente')" shift-enter="orcamento.salvar()" maxlength="10">
+            <input name="endNumero" type="text" class="form-control" ng-readonly="!cliente.novo" ng-model="orcamento.pedido.cliente.endereco.numero" keys-shortcuts prevent-default="true" enter="orcamento.avancar('input', 'tel-cliente')" shift-enter="orcamento.salvar()" maxlength="10">
           </div>
         </div>
       </div>
@@ -297,23 +297,23 @@
         <div><h4>Telefone <sup>{{cliente.novo ? '2' : ''}}</sup></h4></div>
         <div class="input-group">
           <span class="input-group-addon">&nbsp;({{orcamento.pedido.cliente.endereco.ddd || 'DDD'}})&nbsp;</span>
-          <input name="tel-cliente" type="text" class="form-control" ng-model="orcamento.pedido.cliente.telefone" ui-mask="9999-9999" ng-readonly="!cliente.novo" key-shortcuts enter="orcamento.avancar('input', 'ddd-cel-cliente')" shift-enter="orcamento.salvar()">
+          <input name="tel-cliente" type="text" class="form-control" ng-model="orcamento.pedido.cliente.telefone" ui-mask="9999-9999" ng-readonly="!cliente.novo" keys-shortcuts prevent-default="true" enter="orcamento.avancar('input', 'ddd-cel-cliente')" shift-enter="orcamento.salvar()">
         </div>
       </div>
       <div class="col-xs-3 col-sm-3">
         <div class="col-sm-4">
           <div><h4>DDD </h4></div>
-          <input name="ddd-cel-cliente" type="text" class="form-control" ng-model="orcamento.pedido.cliente.dddCelular" ui-mask="(99)" ng-readonly="!cliente.novo" key-shortcuts enter="orcamento.avancar('input', 'cel-cliente')" shift-enter="orcamento.salvar()">
+          <input name="ddd-cel-cliente" type="text" class="form-control" ng-model="orcamento.pedido.cliente.dddCelular" ui-mask="(99)" ng-readonly="!cliente.novo" keys-shortcuts prevent-default="true" enter="orcamento.avancar('input', 'cel-cliente')" shift-enter="orcamento.salvar()">
         </div>
         <div class="col-sm-8">
           <div><h4>Celular <sup>{{cliente.novo ? '2' : ''}}</sup></h4></div>
-          <input name="cel-cliente" type="text" class="form-control" ng-model="orcamento.pedido.cliente.celular" ui-mask="99999-9999" ng-readonly="!cliente.novo" key-shortcuts enter="orcamento.avancar('input', 'email-cliente')" shift-enter="orcamento.salvar()">
+          <input name="cel-cliente" type="text" class="form-control" ng-model="orcamento.pedido.cliente.celular" ui-mask="99999-9999" ng-readonly="!cliente.novo" keys-shortcuts prevent-default="true" enter="orcamento.avancar('input', 'email-cliente')" shift-enter="orcamento.salvar()">
         </div>
       </div>
       <div class="col-xs-3 col-sm-3">
         <div><h4>Email <sup>{{cliente.novo ? '2' : ''}}</sup></h4></div>
         <div>
-          <input name="email-cliente" type="text" class="form-control" ng-model="orcamento.pedido.cliente.email" ng-readonly="!cliente.novo" key-shortcuts enter="" shift-enter="orcamento.salvar()" maxlength="50">
+          <input name="email-cliente" type="text" class="form-control" ng-model="orcamento.pedido.cliente.email" ng-readonly="!cliente.novo" keys-shortcuts prevent-default="true" enter="" shift-enter="orcamento.salvar()" maxlength="50">
         </div>
       </div>
 
@@ -387,6 +387,6 @@
 
 </div>
 
-<div name="impressao" class="impressao" ng-include="'partials/impressaoOrcamento.html'" ng-hide="!orcamento.pedido.id || !orcamento.pedido.codigo || !backup.compare(orcamento.pedido)"></div>
-<h1 class="impressao aviso" ng-show="!orcamento.pedido.id || !orcamento.pedido.codigo || !backup.compare(orcamento.pedido)"><span class="glyphicon glyphicon-alert"></span> Impressão indisponível</h1>
+<div name="impressao" class="impressao" ng-include="'partials/impressaoOrcamento.html'" ng-hide="!orcamento.pedido.id || !orcamento.pedido.codigo || (backup ? !backup.compare(orcamento.pedido) : false)"></div>
+<h1 class="impressao aviso" ng-show="!orcamento.pedido.id || !orcamento.pedido.codigo || (backup ? !backup.compare(orcamento.pedido) : false)"><span class="glyphicon glyphicon-alert"></span> Impressão indisponível</h1>
 
