--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,4 +1,4 @@
-<div id="menu-home" class="">
+<div id="menu-home" class="container">
 
   <div class="row remove-padding">
     <div class="col-sm-6 col-md-4" ng-repeat="botao in botoes">
