--- a/app/views/orcamento.html
+++ b/app/views/orcamento.html
@@ -1,4 +1,4 @@
-<div id="formulario-orcamento">
+<div id="formulario-orcamento" class="container">
 
   <div class="row">
     <div class="col-sm-6 col-md-3">
