--- a/app/styles/_header.scss
+++ b/app/styles/_header.scss
@@ -8,6 +8,11 @@
   background-color: white;
 }
 
+.navbar {
+  margin-bottom: 0;
+  z-index: 10;
+}
+
 .navbar-default {
 
   background-color: $cor-principal;
@@ -60,5 +65,38 @@
       border-bottom: 1px dashed white;
     }
   }
+}
 
+.header-alternativo {
+  position: fixed;
+  width: 100%;
+  height: 140px;
+  background-color: white;//$cor-principal;
+  //position: relative;
+  border-bottom: 10px solid $cor-principal;
+  @extend .sombra;
+
+  //.logo {
+    //position: absolute;
+    //background-color: white;
+    //width: 120px;
+    //height: 120px;
+    //margin-left: 20px;
+    //box-shadow: 0 1px 4px rgba(0, 0, 0, .2);
+    //border-bottom-left-radius: 6px;
+    //border-bottom-right-radius: 6px;
+    background-image: url('../images/logotipo.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 300px;
+  //  left: 0;
+  //  right: 0;
+  //}
+
+  button {
+    display: inline-block;
+    float: right;
+    margin-top: 80px;
+    margin-right: 20px;
+  }
 }
