improvments & bug fixes

--- a/app/partials/dashboard/sobre.html
+++ b/app/partials/dashboard/sobre.html
@@ -43,6 +43,7 @@
     <div class="header">
       <h3>Futura</h3>
     </div>
-    <br><br><br><br>
+    <div class="logo-futura"></div>
+    <div class="descricao"><h3>© 2016.  Agência de Boas Ideias</h3></div>
   </div>
 </div>
