--- a/app/styles/_configuracoes.scss
+++ b/app/styles/_configuracoes.scss
@@ -82,6 +82,19 @@
         background-size: 180px;
       }
 
+      .logo-futura {
+        width: 100%;
+        height: 200px;
+        background-image: url('../images/logo_futura.png');
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: 250px;
+      }
+
+      .descricao {
+        text-align: center;
+      }
+
       .comando {
         display: block;
         line-height: 30px;
