--- a/app/views/configuracoes.html
+++ b/app/views/configuracoes.html
@@ -1,13 +1,13 @@
 <div class="configuracoes">
   <div class="container">
     <div class="row">
-      <div class="col-md-1 controle" ng-init="controle='dashboard'">
-        <div class="botao" ng-click="controle='dashboard'" ng-class="{ 'ativo': controle === 'dashboard'}">
-          <p class="centerX centerY">
-            <span class="glyphicon glyphicon-dashboard"></span>
-            Dashboard
-          </p>
-        </div>
+      <div class="col-md-1 controle" ng-init="controle='usuarios'">
+        <!--<div class="botao" ng-click="controle='dashboard'" ng-class="{ 'ativo': controle === 'dashboard'}">-->
+          <!--<p class="centerX centerY">-->
+            <!--<span class="glyphicon glyphicon-dashboard"></span>-->
+            <!--Dashboard-->
+          <!--</p>-->
+        <!--</div>-->
         <div class="botao" ng-click="controle='usuarios'" ng-class="{ 'ativo': controle === 'usuarios'}">
           <p class="centerX centerY">
             <span class="glyphicon glyphicon-user"></span>
