--- a/app/partials/header.html
+++ b/app/partials/header.html
@@ -18,7 +18,7 @@
         <li><a ng-href="#/home"><span class="glyphicon glyphicon-home"></span> Home</a></li>
         <li><a ng-href="#/orcamento"><span class="glyphicon glyphicon-shopping-cart"></span> Orçamento</a></li>
         <li><a ng-href="#/"><span class="glyphicon glyphicon-user"></span> Clientes</a></li>
-        <li><a ng-href="#/"><span class="glyphicon glyphicon-refresh"></span> Atualização</a></li>
+        <!--<li><a ng-href="#/"><span class="glyphicon glyphicon-refresh"></span> Atualização</a></li>-->
         <li><a ng-href="#/configuracoes"><span class="glyphicon glyphicon-cog"></span> Configurações</a></li>
         <li><a ng-href="#/logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
       </ul>
