--- a/app/styles/_login.scss
+++ b/app/styles/_login.scss
@@ -1,6 +1,17 @@
 #login {
   text-align: center;
 
+  .frase {
+    margin-top: -50px;
+    margin-bottom: 50px;
+    text-align: center;
+
+    h1, h2 {
+      font-weight: 400;
+      color: $cor-principal;
+    }
+  }
+
   .form-login {
     width: 340px;
     height: 340px;
@@ -18,6 +29,20 @@
       background-repeat: no-repeat;
       //margin-bottom: 10px;
       background-position: center;
+    }
+
+    .glyphicon {
+      color: $cor-principal;
+      //background-color: $cor-principal;
+      margin: 0;
+      //padding: 20px;
+      font-size: 4em;
+      //border-radius: 50%;
+      //margin-bottom: 10px;
+    }
+
+    h3 {
+      margin: 0;
     }
 
     input {
