--- a/app/styles/_orcamento.scss
+++ b/app/styles/_orcamento.scss
@@ -83,6 +83,9 @@ $print-font-size: 11px;
 }
 
 #formulario-orcamento {
+  margin-top: 40px;
+  margin-bottom: 40px;
+
   div {
     padding: 4px 4px;
   }
