--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -7,6 +7,9 @@ body {
   min-height: 100%;
   overflow-x: hidden;
   overflow-y: auto; }
+  body > div[name="view-principal"] {
+    display: table;
+    width: 100%; }
 
 body.padding-bottom {
   padding-bottom: 60px; }
@@ -463,6 +466,13 @@ div[name="footer"] .navbar {
 
 #login {
   text-align: center; }
+  #login .frase {
+    margin-top: -50px;
+    margin-bottom: 50px;
+    text-align: center; }
+    #login .frase h1, #login .frase h2 {
+      font-weight: 400;
+      color: #3b5998; }
   #login .form-login {
     width: 340px;
     height: 340px;
@@ -478,6 +488,12 @@ div[name="footer"] .navbar {
       background-size: 70%;
       background-repeat: no-repeat;
       background-position: center; }
+    #login .form-login .glyphicon {
+      color: #3b5998;
+      margin: 0;
+      font-size: 4em; }
+    #login .form-login h3 {
+      margin: 0; }
     #login .form-login input {
       width: 100%;
       height: 50px;
@@ -546,8 +562,12 @@ div[name="footer"] .navbar {
   text-align: center;
   margin-top: 30px; }
 
-#menu-home .remove-padding > div {
-  padding: 8px; }
+#menu-home {
+  display: table-cell;
+  padding: 0 10%;
+  vertical-align: middle; }
+  #menu-home .remove-padding > div {
+    padding: 8px; }
 
 .botao-menu {
   width: 100%;
@@ -631,49 +651,52 @@ div[name="footer"] .navbar {
       background-color: #6481bb;
       color: white; }
 
-#formulario-orcamento div {
-  padding: 4px 4px; }
-#formulario-orcamento h4 {
-  margin-top: 0;
-  margin-bottom: 0;
-  color: #6481bb; }
-#formulario-orcamento h5 {
-  color: #6481bb;
-  margin: 0;
-  margin-top: 5px; }
-#formulario-orcamento .head, #formulario-orcamento .main-head {
-  color: white;
-  background-color: #6481bb;
-  cursor: pointer; }
-  #formulario-orcamento .head h3, #formulario-orcamento .main-head h3 {
-    margin: 10px;
-    color: white; }
-  #formulario-orcamento .head a, #formulario-orcamento .main-head a {
-    color: white; }
-  #formulario-orcamento .head .limpar, #formulario-orcamento .main-head .limpar {
-    font-size: .8em;
-    font-weight: 400;
-    vertical-align: middle; }
-  #formulario-orcamento .head .glyphicon-menu-up, #formulario-orcamento .main-head .glyphicon-menu-up, #formulario-orcamento .head .glyphicon-menu-down, #formulario-orcamento .main-head .glyphicon-menu-down {
-    float: right; }
-#formulario-orcamento .main-head {
-  cursor: default; }
-#formulario-orcamento .input-group input {
-  text-align: right; }
-#formulario-orcamento .btn-form {
-  width: 100%;
-  font-size: 1.2em;
-  height: 50px;
-  color: #6481bb; }
-#formulario-orcamento .btn-orcamento {
-  border: none;
-  background-color: #6481bb;
-  color: white;
-  width: 100%;
-  height: 60px;
-  font-size: 2em; }
-  #formulario-orcamento .btn-orcamento span {
-    vertical-align: -10%; }
+#formulario-orcamento {
+  margin-top: 40px;
+  margin-bottom: 40px; }
+  #formulario-orcamento div {
+    padding: 4px 4px; }
+  #formulario-orcamento h4 {
+    margin-top: 0;
+    margin-bottom: 0;
+    color: #6481bb; }
+  #formulario-orcamento h5 {
+    color: #6481bb;
+    margin: 0;
+    margin-top: 5px; }
+  #formulario-orcamento .head, #formulario-orcamento .main-head {
+    color: white;
+    background-color: #6481bb;
+    cursor: pointer; }
+    #formulario-orcamento .head h3, #formulario-orcamento .main-head h3 {
+      margin: 10px;
+      color: white; }
+    #formulario-orcamento .head a, #formulario-orcamento .main-head a {
+      color: white; }
+    #formulario-orcamento .head .limpar, #formulario-orcamento .main-head .limpar {
+      font-size: .8em;
+      font-weight: 400;
+      vertical-align: middle; }
+    #formulario-orcamento .head .glyphicon-menu-up, #formulario-orcamento .main-head .glyphicon-menu-up, #formulario-orcamento .head .glyphicon-menu-down, #formulario-orcamento .main-head .glyphicon-menu-down {
+      float: right; }
+  #formulario-orcamento .main-head {
+    cursor: default; }
+  #formulario-orcamento .input-group input {
+    text-align: right; }
+  #formulario-orcamento .btn-form {
+    width: 100%;
+    font-size: 1.2em;
+    height: 50px;
+    color: #6481bb; }
+  #formulario-orcamento .btn-orcamento {
+    border: none;
+    background-color: #6481bb;
+    color: white;
+    width: 100%;
+    height: 60px;
+    font-size: 2em; }
+    #formulario-orcamento .btn-orcamento span {
+      vertical-align: -10%; }
 
 #tabela-orcamento {
   border: 2px solid #6481bb; }
@@ -880,6 +903,15 @@ div[name="footer"] .navbar {
     background-position: center;
     background-repeat: no-repeat;
     background-size: 180px; }
+  .configuracoes .dashboard .card .logo-futura {
+    width: 100%;
+    height: 200px;
+    background-image: url("../images/logo_futura.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 250px; }
+  .configuracoes .dashboard .card .descricao {
+    text-align: center; }
   .configuracoes .dashboard .card .comando {
     display: block;
     line-height: 30px;
