--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,6 +1,6 @@
 <div id="menu-home" class="container">
 
-  <div class="row remove-padding">
+  <div class="col-md-12 col-lg-8 col-lg-offset-2 remove-padding">
     <div class="col-sm-6 col-md-4" ng-repeat="botao in botoes">
       <div class="botao-menu highlight" redireciona="{{botao.url}}">
         <div class="centerX centerY">
